# probable

./: .gitignore  .travis.yml  README.md  probable.cabal
bench/: bench.hs  distrib.hs  random.hs
examples/: finite.hs  montyhall.hs  persons.hs  simple.hs
src/Math/: Probable.hs
src/Math/Probable/: Distribution.hs  Distributions.hs  Random.hs  Types.hs  Variate.hs
src/Math/Probable/Distribution/: Finite.hs
