name:                probable
version:             0.1.0.0
synopsis:            Easy and reasonably efficient probabilistic programming
description:         Easy and reasonably efficient probabilistic programming
                     .
                     See 'Math.Probable' for a tutorial.
homepage:            http://github.com/alpmestan/probs
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari
maintainer:          alpmestan@gmail.com
copyright:           2014 Alp Mestanogullari
category:            Math
build-type:          Simple 
cabal-version:       >=1.10

library
  exposed-modules:     Math.Probable,
                       Math.Probable.Distribution,
                       Math.Probable.Distribution.Finite,
                       Math.Probable.Random
  other-modules:       
  build-depends:       base >=4.5 && <4.8,
                       statistics >= 0.10,
                       vector >= 0.10,
                       mwc-random >= 0.10,
                       primitive,
                       mtl,
                       transformers >= 0.3
                       
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -funbox-strict-fields -Wall

benchmark random
  main-is:           random.hs
  hs-source-dirs:    bench
  ghc-options:       -O2 -funbox-strict-fields
  type:              exitcode-stdio-1.0
  build-depends:     base >= 4 && < 5, 
                     vector >= 0.7, 
                     criterion, 
                     probable,
                     mwc-random,
                     mwc-random-monad
  default-language:  Haskell2010

benchmark distrib
  main-is:           distrib.hs
  hs-source-dirs:    bench
  ghc-options:       -O2 -funbox-strict-fields
  type:              exitcode-stdio-1.0
  build-depends:     base >= 4 && < 5, 
                     vector >= 0.7, 
                     criterion, 
                     probable,
                     mwc-random,
                     primitive
                     
  default-language:  Haskell2010
